terraform-swarm/routing.tf
resource "aws_route" "route-public" {
    route_table_id = aws_vpc.notes.main_route_table_id
    destination_cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
}
resource "aws_route_table" "private" {
    vpc_id = aws_vpc.notes.id
    route {
    cidr_block = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.gw.id
 }
   tags = {
     Name = "${var.project_name}-rt-private"
 }
}
resource "aws_route_table_association" "public1" {
    subnet_id = aws_subnet.public1.id
    route_table_id = aws_vpc.notes.main_route_table_id
}
resource "aws_route_table_association" "private1" {
    subnet_id = aws_subnet.private1.id
    route_table_id = aws_route_table.private.id
}
